# sysport

./: Cargo.toml
.github/workflows/: ci.yml
plugins/lua/: sample_plugin.lua
plugins/sample_plugin/: Cargo.toml
plugins/sample_plugin/src/: lib.rs
sysport/: Cargo.toml  LICENSE  README.md  sysport.icns
sysport/scripts/: build-linux.sh  build-macos-arm64.sh  build-macos-x86_64.sh  build-macos.sh  build-windows.bat  upload.sh
sysport/src/: alert.rs  app.rs  export.rs  main.rs  metrics.rs  packet_stats.rs  theme.rs
sysport/src/notifications/: mod.rs
sysport/src/plugins/: lua_plugin.rs  mod.rs
sysport/src/remote/: mod.rs
