[package]
name = "sysport"
version = "1.0.0"
edition = "2021"

[dependencies]
sysinfo = "0.23"
egui = "0.17"
eframe = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_extras = "0.17" # for charts and extra widgets
csv = "1.3"
notify-rust = { version = "4.8", optional = true }
libloading = "0.8"
tokio = { version = "1.37", features = ["full"] }
warp = { version = "0.3", optional = true }
rcgen = "0.12" # for auto-generating PEM certificates
trust-dns-server = "0.22"
rfd = "0.14"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
pcap = "1.1"
maxminddb = "0.23"
regex = "1.10"
image = "0.25" 